# armenian-budget-tools

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  extract_budget_articles.py  pyproject.toml  requirements.txt  sources.json
.github/: FUNDING.yml
config/: checksums.yaml  parsers.yaml  program_patterns.yaml  sources.yaml
data/extracted/: discovery_index.json
data/processed/: 2019_BUDGET_LAW_validation.json  2019_BUDGET_LAW_validation.md  2019_SPENDING_Q1234_validation.json  2019_SPENDING_Q1234_validation.md  2019_SPENDING_Q123_overall.json  2019_SPENDING_Q123_validation.json  2019_SPENDING_Q123_validation.md  2019_SPENDING_Q12_overall.json  2019_SPENDING_Q12_validation.json  2019_SPENDING_Q12_validation.md  2019_SPENDING_Q1_validation.json  2019_SPENDING_Q1_validation.md  2020_BUDGET_LAW.csv  2020_BUDGET_LAW_validation.json  2020_BUDGET_LAW_validation.md  2020_SPENDING_Q1.csv  2020_SPENDING_Q12.csv  2020_SPENDING_Q123.csv  2020_SPENDING_Q1234.csv  2020_SPENDING_Q1234_overall.json  2020_SPENDING_Q1234_validation.json  2020_SPENDING_Q1234_validation.md  2020_SPENDING_Q123_validation.json  2020_SPENDING_Q123_validation.md  2020_SPENDING_Q12_validation.json  (+80 more)
docs/: _docs_todo.md  _mcp_redesign.md  _source_data_issues.md  _validation_impl.md  api_reference.md  architecture.md  data_schemas.md  developer_guide.md  implementation_guide.md  mcp.md  mcp_redesign.md  prd.md  roadmap.md  validation.md  validation_known_issues.md
tests/: README.md  conftest.py  test_budget_verification.py  test_extraction_functions.py
(+130 files in other folders)
