[project]
name = "armenian-budget-tools"
version = "0.2.0"
description = "Armenian Budget Tools: parse and validate Armenian state budget datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "openpyxl",
  "numpy",
  "tqdm",
  "xlrd",
  "colorlog",
  "PyYAML",
  "httpx",
  "mcp",
  "rapidfuzz",
  "polars",
  "pyarrow",
]

[project.scripts]
armenian-budget = "armenian_budget.interfaces.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["armenian_budget*"]