[project]
name = "armenian-budget-tools"
version = "0.4.0.dev0"
description = "Armenian Budget Tools: parse and validate Armenian state budget datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "openpyxl",
  "numpy",
  "tqdm",
  "xlrd",
  "colorlog",
  "PyYAML",
  "httpx",
  "mcp",
  "rapidfuzz",
]

[project.scripts]
armenian-budget = "armenian_budget.interfaces.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "jupyter",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["armenian_budget*"]